force a vertical scrollbar to avoids a jumpy experience

--- a/app/containers/App.css
+++ b/app/containers/App.css
@@ -1,3 +1,9 @@
 .normal {
   background: #1d1c1a;
+  overflow-y: scroll;
+  /* Max height of extension is 600px, if we don't add our
+   * our own max-height, a second scrollbar will appear when
+   * the extension tries to exceed 600px.
+   */
+  max-height: 600px;
 }
