--- a/chrome/extension/options.css
+++ b/chrome/extension/options.css
@@ -24,7 +24,7 @@ body {
   line-height: 1.4em;
   background: #f5f5f5;
   color: #4d4d4d;
-  width: 300px;
+  width: 320px;
   margin: 0 auto;
 }
 
